--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -8,10 +8,8 @@
 name: Java CI with Gradle
 
 on:
-  push:
-    branches: all
-  pull_request:
-    branches: all
+  - push
+  - pull_request
 
 permissions:
   contents: read
