--- a/.github/workflows/editorconfig.yml
+++ b/.github/workflows/editorconfig.yml
@@ -12,6 +12,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name: EditorConfig-Action
-      uses: zbeekman/EditorConfig-Action@v1.1.1
-
+    - uses: editorconfig-checker/action-editorconfig-checker@v1.0.0
+    - run: editorconfig-checker
